Force cache refresh + fix overflow

--- a/pirate/themes/shared/scss/layout/_splitted.scss
+++ b/pirate/themes/shared/scss/layout/_splitted.scss
@@ -11,10 +11,6 @@
         &.swap-smartphone {
             flex-direction: column-reverse;
         }
-
-        .part { 
-            width: 100%;
-        }
     }
 
     .part {
